// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Structure/ino-list-divider BetweenLists smoke-test 1`] = `
<div id="root-inner">
  <ino-list class="hydrated">
    <ul class="mdc-deprecated-list">
      <ino-list-item text="List 1 - item 1"
                     class="hydrated"
      >
        <li class="mdc-deprecated-list-item mdc-ripple-upgraded"
            tabindex="-1"
        >
          <span class="mdc-deprecated-list-item__ripple">
          </span>
          <span class="mdc-deprecated-list-item__text">
            List 1 - item 1
          </span>
        </li>
      </ino-list-item>
      <ino-list-item text="List 1 - item 2"
                     class="hydrated"
      >
        <li class="mdc-deprecated-list-item mdc-ripple-upgraded"
            tabindex="-1"
        >
          <span class="mdc-deprecated-list-item__ripple">
          </span>
          <span class="mdc-deprecated-list-item__text">
            List 1 - item 2
          </span>
        </li>
      </ino-list-item>
      <ino-list-item text="List 1 - item 3"
                     class="hydrated"
      >
        <li class="mdc-deprecated-list-item mdc-ripple-upgraded"
            tabindex="-1"
        >
          <span class="mdc-deprecated-list-item__ripple">
          </span>
          <span class="mdc-deprecated-list-item__text">
            List 1 - item 3
          </span>
        </li>
      </ino-list-item>
    </ul>
  </ino-list>
  <ino-list-divider between-lists="true"
                    class="hydrated"
  >
    <hr class="mdc-deprecated-list-divider">
  </ino-list-divider>
  <ino-list class="hydrated">
    <ul class="mdc-deprecated-list">
      <ino-list-item text="List 2 - item 1"
                     class="hydrated"
      >
        <li class="mdc-deprecated-list-item mdc-ripple-upgraded"
            tabindex="-1"
        >
          <span class="mdc-deprecated-list-item__ripple">
          </span>
          <span class="mdc-deprecated-list-item__text">
            List 2 - item 1
          </span>
        </li>
      </ino-list-item>
      <ino-list-item text="List 2 - item 2"
                     class="hydrated"
      >
        <li class="mdc-deprecated-list-item mdc-ripple-upgraded"
            tabindex="-1"
        >
          <span class="mdc-deprecated-list-item__ripple">
          </span>
          <span class="mdc-deprecated-list-item__text">
            List 2 - item 2
          </span>
        </li>
      </ino-list-item>
      <ino-list-item text="List 2 - item 3"
                     class="hydrated"
      >
        <li class="mdc-deprecated-list-item mdc-ripple-upgraded"
            tabindex="-1"
        >
          <span class="mdc-deprecated-list-item__ripple">
          </span>
          <span class="mdc-deprecated-list-item__text">
            List 2 - item 3
          </span>
        </li>
      </ino-list-item>
    </ul>
  </ino-list>
</div>
`;

exports[`Structure/ino-list-divider Insert smoke-test 1`] = `
<div id="root-inner">
  <ino-list class="hydrated">
    <ul class="mdc-deprecated-list">
      <ino-list-item text="Add to favorites"
                     class="hydrated"
      >
        <li class="mdc-deprecated-list-item mdc-ripple-upgraded"
            tabindex="-1"
        >
          <span class="mdc-deprecated-list-item__ripple">
          </span>
          <span class="mdc-deprecated-list-item__graphic"
                role="presentation"
          >
            <ino-icon slot="leading"
                      icon="favorite"
                      class="hydrated ino-icon--color-scheme-primary"
            >
            </ino-icon>
          </span>
          <span class="mdc-deprecated-list-item__text">
            Add to favorites
          </span>
        </li>
      </ino-list-item>
      <ino-list-divider inset="true"
                        between-lists="false"
                        class="hydrated"
      >
        <li role="separator"
            class="mdc-deprecated-list-divider mdc-deprecated-list-divider--inset-leading"
        >
        </li>
      </ino-list-divider>
      <ino-list-item text="Star it!"
                     class="hydrated"
      >
        <li class="mdc-deprecated-list-item mdc-ripple-upgraded"
            tabindex="-1"
        >
          <span class="mdc-deprecated-list-item__ripple">
          </span>
          <span class="mdc-deprecated-list-item__graphic"
                role="presentation"
          >
            <ino-icon slot="leading"
                      icon="star"
                      class="hydrated ino-icon--color-scheme-primary"
            >
            </ino-icon>
          </span>
          <span class="mdc-deprecated-list-item__text">
            Star it!
          </span>
        </li>
      </ino-list-item>
    </ul>
  </ino-list>
</div>
`;

exports[`Structure/ino-list-divider Padded smoke-test 1`] = `
<div id="root-inner">
  <ino-list class="hydrated">
    <ul class="mdc-deprecated-list">
      <ino-list-item text="Item 2"
                     class="hydrated"
      >
        <li class="mdc-deprecated-list-item mdc-ripple-upgraded"
            tabindex="-1"
        >
          <span class="mdc-deprecated-list-item__ripple">
          </span>
          <span class="mdc-deprecated-list-item__text">
            Item 2
          </span>
        </li>
      </ino-list-item>
      <ino-list-divider inset="false"
                        between-lists="false"
                        padded="true"
                        class="hydrated"
      >
        <li role="separator"
            class="mdc-deprecated-list-divider mdc-deprecated-list-divider--inset-leading mdc-deprecated-list-divider--inset-trailing"
        >
        </li>
      </ino-list-divider>
      <ino-list-item text="Item 3"
                     class="hydrated"
      >
        <li class="mdc-deprecated-list-item mdc-ripple-upgraded"
            tabindex="-1"
        >
          <span class="mdc-deprecated-list-item__ripple">
          </span>
          <span class="mdc-deprecated-list-item__text">
            Item 3
          </span>
        </li>
      </ino-list-item>
    </ul>
  </ino-list>
</div>
`;

exports[`Structure/ino-list-divider Playground smoke-test 1`] = `
<div id="root-inner">
  <ino-list class="hydrated">
    <ul class="mdc-deprecated-list">
      <ino-list-item text="Item 2"
                     class="hydrated"
      >
        <li class="mdc-deprecated-list-item mdc-ripple-upgraded"
            tabindex="-1"
        >
          <span class="mdc-deprecated-list-item__ripple">
          </span>
          <span class="mdc-deprecated-list-item__text">
            Item 2
          </span>
        </li>
      </ino-list-item>
      <ino-list-divider inset="false"
                        between-lists="false"
                        padded="false"
                        class="hydrated"
      >
        <li role="separator"
            class="mdc-deprecated-list-divider"
        >
        </li>
      </ino-list-divider>
      <ino-list-item text="Item 3"
                     class="hydrated"
      >
        <li class="mdc-deprecated-list-item mdc-ripple-upgraded"
            tabindex="-1"
        >
          <span class="mdc-deprecated-list-item__ripple">
          </span>
          <span class="mdc-deprecated-list-item__text">
            Item 3
          </span>
        </li>
      </ino-list-item>
    </ul>
  </ino-list>
</div>
`;
